# Exercises-Solutions

./: .gitignore  CMakeLists.txt
Exercises/: CMakeLists.txt
Exercises/C_common/: wtime.c
Exercises/Exercise01/Cpp/: CMakeLists.txt  DeviceInfo.cpp
Exercises/Exercise02/C/: vadd_c.c
Exercises/Exercise02/Cpp/: CMakeLists.txt  vadd_c.cpp  wtime.cpp
Exercises/Exercise03/Cpp/: CMakeLists.txt  vadd.cpp
Exercises/Exercise04/Cpp/: CMakeLists.txt  vadd.cpp
Exercises/Exercise05/Cpp/: CMakeLists.txt  vadd.cpp
Exercises/Exercise06/Cpp/: CMakeLists.txt  matmul.cpp  matmul.hpp
